--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.0.1",
     "pg-promise": "^11.5.4"
   }
