--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "jsrsasign": "^11.1.0",
     "morgan": "^1.10.0",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.0.1",
